# CENXIRA

keycloak_auth/: pyproject.toml  setup.py
keycloak_auth/keycloak_auth/: __init__.py  admin.py  config.py  core.py  fastapi_utils.py  models.py
rbac_system/: pyproject.toml  setup.py
rbac_system/rbac_system/: __init__.py  config.py  engine.py  fastapi_utils.py  models.py  repository.py
taskflow_system/: pyproject.toml  setup.py
taskflow_system/taskflow_system/: __init__.py  config.py  models.py  repository.py  schemas.py  service.py
training_portal/: main.py
training_portal/app/: config.py  database.py  main.py  middleware.py  models.py  schemas.py  utils.py
training_portal/app/api/: __init__.py  admin.py  auth.py  manager.py  trainee.py
training_portal/app/services/: email.py  okta.py
training_portal/scripts/: activate_corporate_security.py  ensure_admin.py  seed_rbac.py
training_portal_frontend/: admin.html  index.html  manager.html  package-lock.json  package.json  server.js  trainee.html
